--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,6 @@ select { color:#CCCCCC; width:145px; background-color:#212025; border:solid; bor
 .login4 a:visited { padding:5px; color:#999999; font-size:12px; font-family:Tahoma; }
 .h1 { color:#FFFFFF; font-size:18px; font-weight:bold; font-family:Tahoma; }
 .h2 { color:#666666; font-size:14px; font-weight:bold; font-family:Tahoma; }
-.news { padding:110px; color:#999999; font-size:12px; font-family:Tahoma; text-align: right;vertical-align:top; border:1px solid #999999; }
 * { margin:0; padding:0; }
 
 html { background-color:#4e4e4e; color:#bbb; font-size:12px; font-family:sans-serif; }
@@ -83,9 +82,11 @@ fieldset { border:1px solid #777; padding:.5em; }
 #chat-applet { width:100%; height:30em; }
 
 .news { position:relative; }
-.news .time { font-size:.8em; position:absolute; bottom:0; right:0; }
-.news .author { position:absolute; top:5%; left: 70%; }
-.news .topic { position:absolute; top:5%; right: 5% color: #00FF00; }
+.news .entry { border:1px solid; padding:15px; margin:10px; display:block; width:400px }
+.news .topic { font-size:1.8m; color: #A0FF00; }
+.news .author { font-size:.8em; display:inline; }
+.news .time { font-size:.8em; display:block; }
+.news .content { display:block; }
 * html .news .time { display:none; }
 
 .error { text-align:center; font-weight:bold; color:#f00; }
