--- a/login/style/default/simple_grey/style.inc.css
+++ b/login/style/default/simple_grey/style.inc.css
@@ -526,5 +526,7 @@ br.clear { clear:both; }
 .autocomplete li.selected { background-color:Highlight; color:HighlightText; }
 * html form { position:relative; }
 
+.fleetoverview { color: #fee454; }
+
 
 
