--- a/login/style/default/grey_graphics/style.inc.css
+++ b/login/style/default/grey_graphics/style.inc.css
@@ -82,3 +82,11 @@ body {  background-position:left bottom; background-repeat:no-repeat; background
 .planet-20 #css-3 { background-image:url(image.php?default%2fgrey_graphics%2fimages%2fplanets_small%2fplanet20.png); }
 
 .fleetoverview { color: #fee454; }
+
+.unbeschaeftigte-planeten2 { list-style-type:none; margin:0; padding:0; font-weight:bold; }
+.unbeschaeftigte-planeten2 .c-voriger2 { position:absolute; bottom:0; left:0; }
+.unbeschaeftigte-planeten2 .c-voriger2 a:after { vertical-align:middle; font-size:.8em; }
+.unbeschaeftigte-planeten2 .c-voriger2 a:after { content:"\a0 Fastbuild"; }
+.unbeschaeftigte-planeten2 .c-naechster2 { position:absolute; bottom:0; right:0; }
+.unbeschaeftigte-planeten2 .c-naechster2 a:before { vertical-align:middle; font-size:.8em; }
+.unbeschaeftigte-planeten2 .c-naechster2 a:before { content:"Fastbuild\a0"; }
