--- a/login/style/default/kerberos/style.inc.css
+++ b/login/style/default/kerberos/style.inc.css
@@ -1292,3 +1292,11 @@ height: 250px;
 }
 
 .fleetoverview { color: #fee454; }
+
+.unbeschaeftigte-planeten2 { list-style-type:none; margin:0; padding:0; font-weight:bold; }
+.unbeschaeftigte-planeten2 .c-voriger2 { position:absolute; bottom:0; left:0; }
+.unbeschaeftigte-planeten2 .c-voriger2 a:after { vertical-align:middle; font-size:.8em; }
+.unbeschaeftigte-planeten2 .c-voriger2 a:after { content:"\a0 Fastbuild"; }
+.unbeschaeftigte-planeten2 .c-naechster2 { position:absolute; bottom:0; right:0; }
+.unbeschaeftigte-planeten2 .c-naechster2 a:before { vertical-align:middle; font-size:.8em; }
+.unbeschaeftigte-planeten2 .c-naechster2 a:before { content:"Fastbuild\a0"; }
