--- a/login/style/default/simple_blue/style.inc.css
+++ b/login/style/default/simple_blue/style.inc.css
@@ -24,3 +24,11 @@ a:hover,a:focus,#flotten .beschreibung:hover,#flotten .handel a:hover,#flotten .
 #flotten .rueckflug .beschreibung:hover,.nachrichten-kategorien .alt a:hover,.nachrichten-kategorien .alt a:focus,.nachrichten-liste .alt a:hover,.nachrichten-liste .alt a:focus,.nachrichten-liste .archiviert a:hover,.nachrichten-liste .archiviert a:focus { color:#779; }
 
 .fleetoverview { color: #fee454; }
+
+.unbeschaeftigte-planeten2 { list-style-type:none; margin:0; padding:0; font-weight:bold; }
+.unbeschaeftigte-planeten2 .c-voriger2 { position:absolute; bottom:0; left:0; }
+.unbeschaeftigte-planeten2 .c-voriger2 a:after { vertical-align:middle; font-size:.8em; }
+.unbeschaeftigte-planeten2 .c-voriger2 a:after { content:"\a0 Fastbuild"; }
+.unbeschaeftigte-planeten2 .c-naechster2 { position:absolute; bottom:0; right:0; }
+.unbeschaeftigte-planeten2 .c-naechster2 a:before { vertical-align:middle; font-size:.8em; }
+.unbeschaeftigte-planeten2 .c-naechster2 a:before { content:"Fastbuild\a0"; }
