--- a/login/style/default/kerberos/style.inc.css
+++ b/login/style/default/kerberos/style.inc.css
@@ -662,6 +662,7 @@ h2#punkte { clear:right; }
 #planets li + .active + li { border-top-style:solid; border-top-width:.1em; }
 * html #planets li.active .planet-info { width:100%; }
 #planets .gelangweilt { font-weight:bold; color:#8bf; }
+#planets .im-ausbau { font-weight:bold; color:#e6eb05; }
 
 /* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 Flotten
