- added func to get all res on all fleets owned by player himself - added row to imperial overview that shows all res on fleets

--- a/login/style/default/simple_blue/style.inc.css
+++ b/login/style/default/simple_blue/style.inc.css
@@ -32,3 +32,5 @@ a:hover,a:focus,#flotten .beschreibung:hover,#flotten .handel a:hover,#flotten .
 .unbeschaeftigte-planeten2 .c-naechster2 { position:absolute; bottom:0; right:0; }
 .unbeschaeftigte-planeten2 .c-naechster2 a:before { vertical-align:middle; font-size:.8em; }
 .unbeschaeftigte-planeten2 .c-naechster2 a:before { content:"Fastbuild\a0"; }
+
+#planets .im-ausbau { font-weight:bold; color:#e6eb05; }
