Admin-Bereich: Gebäudelevel erhöhen/herabsetzen Einheiten einsetzen (#0000028)

--- a/admin/style.css
+++ b/admin/style.css
@@ -1,7 +1,7 @@
 /* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 							Admininterface Skin Sytle
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
-html { font-size:0.8em; color:#fff; font-style:small; font-family: arial; }
+html { font-size:0.8em; color:#fff; font-family: arial; }
 
 body { background-color:#124; margin:1em; }
 
