--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,12 +69,9 @@ dt:after { content:":\a0"; }
 dd { margin-left:2em; }
 form dt { width:50%; margin:.3em 0; font-weight:normal; }
 form dd { margin:.3em 0; }
-form ul,form div { clear:left; list-style-type:none; margin:0; padding:.5em; }
+form ul,form div { clear:left; /* list-style-type:none; */ margin:0; padding:.5em; }
 legend { font-weight:bold; padding:0 .2em; }
-
 fieldset { border:1px solid #777; padding:.5em; }
-
-
 .screenshots { list-style-type:none; text-align:center; }
 .screenshots li { display:inline; }
 .screenshots img { border:1px solid #aaa; }
@@ -82,11 +79,13 @@ fieldset { border:1px solid #777; padding:.5em; }
 #chat-applet { width:100%; height:30em; }
 
 .news { position:relative; }
-.news .entry { border:1px solid; padding:15px; margin:10px; display:block; width:400px }
+.news .entry { padding:15px; margin:10px; display:block; width:400px }
 .news .topic { font-size:1.8m; color: #A0FF00; }
+.news .topic a:link { font-size:1.8m; color: #A0BF00; text-decoration: none; }
 .news .author { font-size:.8em; display:inline; }
 .news .time { font-size:.8em; display:block; }
 .news .content { display:block; }
+
 * html .news .time { display:none; }
 
 .error { text-align:center; font-weight:bold; color:#f00; }
