some progress on the ticketsystem, refactored/redesigned admin access levels

--- a/admin/style.css
+++ b/admin/style.css
@@ -22,3 +22,12 @@ hr,table,tfoot,thead,tbody,tr,td,th { border:.1em solid #679;  vertical-align:mi
 
 fieldset { padding:.5em; margin:.5em; border:.2em solid #679; }
 legend { font-weight:bold; }
+
+#editAdminName { font-size: 1.3em; font-weight: bold; }
+
+#permTable { border: none; margin: 10px; }
+#permTable td { padding: 5px 10px 5px 10px; }
+#enabled { text-color: green; background-color: green; }
+#disabled { text-color: red; background-color: red; }
+#revokedPerm { color: red; font-weight:bold; }
+#grantedPerm { color: green; font-weight:bold; }
