--- a/css/ticketsystem.css
+++ b/css/ticketsystem.css
@@ -74,6 +74,7 @@
 
 #ticketTableStatus {
 	width: 15%;
+	text-align: center;
 }
 
 #ticketTable {
@@ -95,7 +96,7 @@
 	border: 0.2em solid #AAAAAA;
 	font-size: 1.3em;
 	margin-top: 20px;
-	margin-left: 250px;
+	margin-left: 30%;
 	line-height: 1.7;
 }
 
@@ -125,7 +126,8 @@
 }
 
 #ticketDetailSubject {
-	
+	text-align: center;
+	background-color: #778899;
 }
 
 #ticketDetailReporter {
@@ -135,8 +137,16 @@
   	font-weight: bold;	
 }
 
+#ticketDetailReporterGO {
+	width: 100%;
+	text-align: center;
+	font-size: 1.2em;
+  	font-weight: bold;
+  	color: #FFB200;
+}
+
 #ticketDetailCreatedTime {
-	
+	text-align: center;	
 }
 
 #ticketError {
